fixed spacing for set card

--- a/react-app/src/components/Dashboard/Dashboard.css
+++ b/react-app/src/components/Dashboard/Dashboard.css
@@ -25,6 +25,7 @@
   color: var(--light-shade);
   font-size: 2.2rem;
   padding-bottom: 2rem;
+  padding-top: 1.5rem;
 }
 
 .dashboard-logo {
